Modify some instuction.

--- a/iOSAppIndoor/Main.storyboard
+++ b/iOSAppIndoor/Main.storyboard
@@ -46,7 +46,7 @@
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                                 <connections>
-                                    <segue destination="ek2-fj-VKm" kind="presentation" id="PdD-pn-mZ7"/>
+                                    <segue destination="INM-Mf-KL5" kind="presentation" id="i9q-N4-4cC"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleAspectFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="onB-N1-6bz">
@@ -289,28 +289,6 @@
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="image.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="ZVS-hu-q4N">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                             </imageView>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="HBB-9z-GRQ">
-                                <rect key="frame" x="52.5" y="273.5" width="270" height="120"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="120" id="acv-ce-4We"/>
-                                    <constraint firstAttribute="width" constant="270" id="epz-I8-o9c"/>
-                                </constraints>
-                                <string key="text">First, please place the iPhone on stable platform and keep charging. 
-Second, after keeping it unmoving, press the switch bar to start detecting. If your phone is not placed as flat, the detection will be inaccurate.</string>
-                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                            </textView>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" text="Welcome to EEWS Test" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="FLn-WJ-OG9">
-                                <rect key="frame" x="107.5" y="166.5" width="160" height="34"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="160" id="DOG-M6-DP5"/>
-                                    <constraint firstAttribute="height" constant="34" id="o09-WL-GLz"/>
-                                </constraints>
-                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                            </textView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IsX-Le-wWF">
                                 <rect key="frame" x="284" y="573" width="67" height="61"/>
                                 <constraints>
@@ -332,26 +310,34 @@ Second, after keeping it unmoving, press the switch bar to start detecting. If y
                                     <segue destination="INM-Mf-KL5" kind="presentation" id="TGS-MX-a2v"/>
                                 </connections>
                             </button>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" text="Welcome to EEWS " textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="FLn-WJ-OG9">
+                                <rect key="frame" x="87" y="216" width="200" height="65"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="200" id="07j-po-4H7"/>
+                                    <constraint firstAttribute="height" constant="65" id="vOO-NR-mqO"/>
+                                </constraints>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="23"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="ZVS-hu-q4N" firstAttribute="trailing" secondItem="Xyb-Ln-uFQ" secondAttribute="trailing" id="FlQ-D7-IXe"/>
                             <constraint firstItem="ZVS-hu-q4N" firstAttribute="bottom" secondItem="Xyb-Ln-uFQ" secondAttribute="bottom" id="O7C-Y3-A03"/>
+                            <constraint firstItem="FLn-WJ-OG9" firstAttribute="leading" secondItem="Xyb-Ln-uFQ" secondAttribute="leading" constant="87" id="P0t-SR-001"/>
                             <constraint firstItem="IsX-Le-wWF" firstAttribute="centerY" secondItem="WB4-1R-ybe" secondAttribute="centerY" constant="270" id="PfA-qk-87g"/>
+                            <constraint firstItem="FLn-WJ-OG9" firstAttribute="top" secondItem="Xyb-Ln-uFQ" secondAttribute="top" constant="196" id="Suv-tZ-hHw"/>
                             <constraint firstItem="ZVS-hu-q4N" firstAttribute="leading" secondItem="Xyb-Ln-uFQ" secondAttribute="leading" id="Xlf-60-8Oa"/>
                             <constraint firstItem="IsX-Le-wWF" firstAttribute="centerX" secondItem="WB4-1R-ybe" secondAttribute="centerX" constant="130" id="aCF-kV-aTA"/>
-                            <constraint firstItem="HBB-9z-GRQ" firstAttribute="centerY" secondItem="WB4-1R-ybe" secondAttribute="centerY" id="gd6-ap-d6q"/>
-                            <constraint firstItem="FLn-WJ-OG9" firstAttribute="centerY" secondItem="WB4-1R-ybe" secondAttribute="centerY" constant="-150" id="iOe-Hv-sIN"/>
-                            <constraint firstItem="HBB-9z-GRQ" firstAttribute="centerX" secondItem="WB4-1R-ybe" secondAttribute="centerX" id="lm5-Rb-qKD"/>
                             <constraint firstItem="ZVS-hu-q4N" firstAttribute="top" secondItem="WB4-1R-ybe" secondAttribute="top" id="rmp-CP-ptP"/>
-                            <constraint firstItem="FLn-WJ-OG9" firstAttribute="centerX" secondItem="WB4-1R-ybe" secondAttribute="centerX" id="x9d-cy-AJT"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Xyb-Ln-uFQ"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="E8C-0h-5Ef" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-214" y="875"/>
+            <point key="canvasLocation" x="-215.19999999999999" y="874.81259370314854"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="UOl-4b-FfY">
@@ -364,16 +350,31 @@ Second, after keeping it unmoving, press the switch bar to start detecting. If y
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="image.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="OGs-Z2-rUd">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                             </imageView>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="rji-Ju-gcX">
-                                <rect key="frame" x="67.5" y="258.5" width="240" height="150"/>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="ilX-s0-Ghu">
+                                <rect key="frame" x="52.5" y="183.5" width="270" height="300"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="300" id="cpF-2v-caD"/>
+                                    <constraint firstAttribute="width" constant="270" id="zQO-Td-ibg"/>
+                                </constraints>
+                                <string key="text">1.  Place the iPhone on stable platform and keep charging. 
+
+2. After keeping it unmoving, press the switch bar to start detecting. 
+
+3. If your phone is not placed as flat, the detection will be inaccurate.
+
+4. If you have another iPhone with EEWSMobile. Press GENQRCode in EEWSMobile.
+
+5. Next, press the ScanQRCode to pair with Mobile iPhones. It will receive notification from EEWSIndoor.</string>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="justified" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="rji-Ju-gcX">
+                                <rect key="frame" x="67.5" y="183.5" width="240" height="300"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="240" id="6pE-rN-ZH7"/>
-                                    <constraint firstAttribute="height" constant="150" id="Sct-mT-zQa"/>
+                                    <constraint firstAttribute="height" constant="300" id="Sct-mT-zQa"/>
                                 </constraints>
-                                <string key="text">If you have another iPhone with EEWSMobile.
-Please press GENQRCode in EEWSMobile.
-Next, press the ScanQRCode to pair with another iPhones.
-It will receive notification from EEWSIndoor.</string>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
@@ -384,7 +385,7 @@ It will receive notification from EEWSIndoor.</string>
                                     <constraint firstAttribute="height" constant="61" id="588-oB-Nan"/>
                                     <constraint firstAttribute="width" constant="67" id="m2y-dH-bgb"/>
                                 </constraints>
-                                <state key="normal" title="Next">
+                                <state key="normal" title="Back">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
                                 <userDefinedRuntimeAttributes>
@@ -396,15 +397,29 @@ It will receive notification from EEWSIndoor.</string>
                                     <segue destination="BYZ-38-t0r" kind="presentation" id="hux-9b-sKA"/>
                                 </connections>
                             </button>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" text="Recommendations for use" textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="12v-a5-R1p">
+                                <rect key="frame" x="72" y="111" width="230" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="230" id="Ccw-mc-23D"/>
+                                    <constraint firstAttribute="height" constant="30" id="ZKs-nW-bQz"/>
+                                </constraints>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="rji-Ju-gcX" firstAttribute="centerX" secondItem="SwU-12-foy" secondAttribute="centerX" id="20I-L7-7uG"/>
                             <constraint firstItem="HxA-Jb-ibU" firstAttribute="centerX" secondItem="SwU-12-foy" secondAttribute="centerX" constant="130" id="9zY-hU-ZcR"/>
+                            <constraint firstItem="ilX-s0-Ghu" firstAttribute="centerX" secondItem="SwU-12-foy" secondAttribute="centerX" id="AK2-sd-MKy"/>
                             <constraint firstItem="rji-Ju-gcX" firstAttribute="centerY" secondItem="SwU-12-foy" secondAttribute="centerY" id="BZ6-iZ-oQD"/>
+                            <constraint firstItem="12v-a5-R1p" firstAttribute="leading" secondItem="oXx-A5-gRx" secondAttribute="leading" constant="72" id="I2W-YF-hsg"/>
                             <constraint firstItem="OGs-Z2-rUd" firstAttribute="leading" secondItem="oXx-A5-gRx" secondAttribute="leading" id="Kt9-mh-6Xt"/>
                             <constraint firstItem="OGs-Z2-rUd" firstAttribute="bottom" secondItem="oXx-A5-gRx" secondAttribute="bottom" id="N3l-lR-tON"/>
                             <constraint firstItem="OGs-Z2-rUd" firstAttribute="trailing" secondItem="oXx-A5-gRx" secondAttribute="trailing" id="T6G-FZ-alM"/>
+                            <constraint firstItem="12v-a5-R1p" firstAttribute="top" secondItem="oXx-A5-gRx" secondAttribute="top" constant="91" id="TpF-zd-Ela"/>
+                            <constraint firstItem="ilX-s0-Ghu" firstAttribute="centerY" secondItem="SwU-12-foy" secondAttribute="centerY" id="l6n-eA-b5l"/>
                             <constraint firstItem="OGs-Z2-rUd" firstAttribute="top" secondItem="SwU-12-foy" secondAttribute="top" id="udL-qg-sPJ"/>
                             <constraint firstItem="HxA-Jb-ibU" firstAttribute="centerY" secondItem="SwU-12-foy" secondAttribute="centerY" constant="270" id="v6R-Kz-H8U"/>
                         </constraints>
@@ -563,6 +578,7 @@ It will receive notification from EEWSIndoor.</string>
         <image name="lowPowerImage.jpg" width="2048" height="2048"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="Pf9-rh-tmz"/>
+        <segue reference="i9q-N4-4cC"/>
+        <segue reference="hux-9b-sKA"/>
     </inferredMetricsTieBreakers>
 </document>
